# invenio-oaiserver

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  conf.py  configuration.rst  index.rst  usage.rst
examples/: app-teardown.sh  app.py  requirements.txt
examples/data/records/: record-v1.0.0.json
examples/data/v5/: __init__.py
examples/data/v5/records/: record-v1.0.0.json
invenio_oaiserver/: __init__.py  admin.py  cli.py  config.py  errors.py  ext.py  fetchers.py  forms.py  minters.py  models.py  percolator.py  provider.py  proxies.py  query.py  receivers.py  response.py  resumption_token.py  tasks.py  utils.py  verbs.py  version.py
invenio_oaiserver/alembic/: 5d25c1981985_add_system_created_field.py  759d47cbdba7_create_oaiserver_branch.py  e655021de0de_create_oiaserver_tables.py  f9b1e3f7d3b1_change_datetime_types.py
invenio_oaiserver/schemas/: __init__.py
invenio_oaiserver/search/component_templates/os-v2/: __init__.py  oairecord-v1.0.0.json
invenio_oaiserver/search/component_templates/v7/: __init__.py  oairecord-v1.0.0.json
invenio_oaiserver/templates/invenio_oaiserver/settings/: base.html  edit_set.html  index.html  macros_bootstrap.html  make_set.html  sets.html
invenio_oaiserver/translations/: messages.pot
invenio_oaiserver/translations/af/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/ar/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/bg/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/ca/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/cs/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/da/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/de/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/el/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/en/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/es/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/et/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/et_EE/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/fa/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/fi/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/fr/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/gl/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/hr/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/hu/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/it/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/ja/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/ka/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/ko/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/lt/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/no/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/pl/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/pt/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/ro/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/ru/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/rw/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/sk/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/sv/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/tr/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/uk/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_oaiserver/translations/zh_TW/LC_MESSAGES/: messages.po
invenio_oaiserver/views/: __init__.py  server.py  settings.py
invenio_oaiserver/views/forms/: __init__.py  new_set.py
tests/: conftest.py  helpers.py  test_admin.py  test_alembic.py  test_app.py  test_cli.py  test_examples_app.py  test_invenio_oaiserver.py  test_listrecords.py  test_percolator.py  test_verbs.py
tests/data/: __init__.py
tests/data/os-v1/: __init__.py
tests/data/records/: record-v1.0.0.json
tests/data/v5/records/: record-v1.0.0.json
