# SPDX-FileCopyrightText: 2015-2025 CERN.
# SPDX-FileCopyrightText: 2021-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2024 KTH Royal Institute of Technology.
# SPDX-FileCopyrightText: 2021-2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-oaiserver"
description = "Invenio module that implements OAI-PMH server."
readme = "README.rst"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "OAI-PMH",
  "invenio",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "arrow>=0.17.0",
  "dojson>=1.3.0,<2.0.0",
  "invenio-base>=2.0.0,<3.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "invenio-pidstore>=4.0.0,<5.0.0",
  "invenio-records>=6.0.0,<7.0.0",
  "invenio-rest>=4.0.0,<5.0.0",
  "lxml>=4.3.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-oaiserver"

[project.entry-points."invenio_admin.views"]
invenio_oaiserver = "invenio_oaiserver.admin:set_adminview"

[project.entry-points."invenio_base.api_apps"]
invenio_oaiserver = "invenio_oaiserver:InvenioOAIServer"

[project.entry-points."invenio_base.apps"]
invenio_oaiserver = "invenio_oaiserver:InvenioOAIServer"

[project.entry-points."invenio_base.blueprints"]
invenio_oaiserver = "invenio_oaiserver.views.server:blueprint"

[project.entry-points."invenio_db.alembic"]
invenio_oaiserver = "invenio_oaiserver:alembic"

[project.entry-points."invenio_db.models"]
invenio_oaiserver = "invenio_oaiserver.models"

[project.entry-points."invenio_i18n.translations"]
invenio_oaiserver = "invenio_oaiserver"

[project.entry-points."invenio_jsonschemas.schemas"]
oaiserver = "invenio_oaiserver.schemas"

[project.entry-points."invenio_pidstore.fetchers"]
oaiid = "invenio_oaiserver.fetchers:oaiid_fetcher"

[project.entry-points."invenio_pidstore.minters"]
oaiid = "invenio_oaiserver.minters:oaiid_minter"

[project.entry-points."invenio_search.component_templates"]
oairecord = "invenio_oaiserver.search.component_templates"

[project.optional-dependencies]
elasticsearch7 = [
  "invenio-search[elasticsearch7]>=3.0.0,<4.0.0",
]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
tests = [
  "invenio-admin>=1.6.0,<2.0.0",
  "invenio-celery>=2.0.0,<3.0.0",
  "invenio-db[mysql,postgresql,versioning]>=2.2.0,<3.0.0",
  "invenio-indexer>=6.0.0,<7.0.0",
  "invenio-jsonschemas>=2.0.0,<3.0.0",
  "mock>=1.3.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_oaiserver/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_oaiserver/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_oaiserver/translations/messages.pot"
output_dir = "invenio_oaiserver/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_oaiserver/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_oaiserver",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_oaiserver --cov-report=term-missing'
filterwarnings = ["ignore::pytest.PytestDeprecationWarning"]
testpaths = "tests invenio_oaiserver"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
    { extra = "elasticsearch7" },
  ]
]
